src/test/ui/consts/const-eval/conditional_array_execution.stderr
warning: any use of this value will cause an error
  --> $DIR/conditional_array_execution.rs:5:19
   |
LL | const FOO: u32 = [X - Y, Y - X][(X < Y) as usize];
   | ------------------^^^^^---------------------------
   |                   |
   |                   attempt to subtract with overflow
   |
note: lint level defined here
  --> $DIR/conditional_array_execution.rs:1:9
   |
LL | #![warn(const_err)]
   |         ^^^^^^^^^

error[E0080]: evaluation of constant expression failed
  --> $DIR/conditional_array_execution.rs:9:20
   |
LL |     println!("{}", FOO);
   |                    ^^^ referenced constant has errors

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
